// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Snapshots matches snapshot for different states: complete-product 1`] = `
<View
  accessibilityLabel="Product: Black Winter Jacket, Price: 499 INR, Rating: 5 stars"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 20,
        "elevation": 2,
        "marginVertical": 10,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 2,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 2,
        "width": 718,
      },
      undefined,
      false,
    ]
  }
>
  <View
    style={
      {
        "aspectRatio": 1.1,
        "borderRadius": 8,
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    >
      <FastImageView
        accessibilityLabel="Black Winter Jacket product image"
        defaultSource={null}
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          {
            "priority": "normal",
            "uri": "https://images.unsplash.com/photo-1551028719-00167b16eac5?w=300&h=400&fit=crop",
          }
        }
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "paddingBottom": 8,
        "paddingHorizontal": 12,
        "paddingVertical": 16,
      }
    }
  >
    <Text
      accessibilityLabel="Product name: Black Winter Jacket"
      numberOfLines={1}
      style={
        {
          "color": "#1C1B1F",
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.02,
          "lineHeight": 14,
          "marginBottom": 8,
        }
      }
    >
      Black Winter Jacket
    </Text>
    <Text
      accessibilityLabel="Description: Autumn And Winter Casual cotton-padded jacket"
      numberOfLines={2}
      style={
        {
          "color": "#575757",
          "fontSize": 13,
          "lineHeight": 14,
          "marginBottom": 4,
          "opacity": 0.8,
        }
      }
    >
      Autumn And Winter Casual cotton-padded jacket
    </Text>
    <View
      style={
        {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1C1B1F",
            "fontSize": 14,
          }
        }
      >
        ₹ 499.00
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <View
        accessibilityRole="image"
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "fontSize": 20,
                "marginHorizontal": 2,
              },
              {
                "color": "#ffb300",
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "fontSize": 20,
                "marginHorizontal": 2,
              },
              {
                "color": "#ffb300",
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "fontSize": 20,
                "marginHorizontal": 2,
              },
              {
                "color": "#ffb300",
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "fontSize": 20,
                "marginHorizontal": 2,
              },
              {
                "color": "#ffb300",
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "fontSize": 20,
                "marginHorizontal": 2,
              },
              {
                "color": "#ffb300",
              },
            ]
          }
        >
          ★
        </Text>
      </View>
      <Text
        accessibilityLabel="6,890 reviews"
        style={
          {
            "color": "#9CA4AB",
            "fontSize": 13,
            "fontWeight": "500",
            "opacity": 0.7,
          }
        }
      >
        6,890
      </Text>
    </View>
  </View>
</View>
`;

exports[`ProductCard Snapshots matches snapshot for different states: with-wishlist 1`] = `
<View
  accessibilityLabel="Product: Black Winter Jacket, Price: 499 INR, Rating: 5 stars"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 20,
        "elevation": 2,
        "marginVertical": 10,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 2,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 2,
        "width": 718,
      },
      undefined,
      false,
    ]
  }
>
  <View
    style={
      {
        "aspectRatio": 1.1,
        "borderRadius": 8,
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    >
      <FastImageView
        accessibilityLabel="Black Winter Jacket product image"
        defaultSource={null}
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          {
            "priority": "normal",
            "uri": "https://images.unsplash.com/photo-1551028719-00167b16eac5?w=300&h=400&fit=crop",
          }
        }
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="Add to wishlist"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0.08)",
            "borderRadius": 8,
            "elevation": 3,
            "padding": 5,
            "position": "absolute",
            "right": 5,
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "top": 5,
          },
          false,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={21}
        vbWidth={24}
        width={20}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M20.84 2.61012C20.3292 2.09912 19.7228 1.69376 19.0554 1.4172C18.3879 1.14064 17.6725 0.998291 16.95 0.998291C16.2275 0.998291 15.5121 1.14064 14.8446 1.4172C14.1772 1.69376 13.5708 2.09912 13.06 2.61012L12 3.67012L10.94 2.61012C9.9083 1.57842 8.50903 0.998826 7.05 0.998826C5.59096 0.998826 4.19169 1.57842 3.16 2.61012C2.1283 3.64181 1.54871 5.04108 1.54871 6.50012C1.54871 7.95915 2.1283 9.35842 3.16 10.3901L4.22 11.4501L12 19.2301L19.78 11.4501L20.84 10.3901C21.351 9.87936 21.7563 9.27293 22.0329 8.60547C22.3095 7.93801 22.4518 7.2226 22.4518 6.50012C22.4518 5.77763 22.3095 5.06222 22.0329 4.39476C21.7563 3.7273 21.351 3.12087 20.84 2.61012Z"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4280032031,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      {
        "paddingBottom": 8,
        "paddingHorizontal": 12,
        "paddingVertical": 16,
      }
    }
  >
    <Text
      accessibilityLabel="Product name: Black Winter Jacket"
      numberOfLines={1}
      style={
        {
          "color": "#1C1B1F",
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.02,
          "lineHeight": 14,
          "marginBottom": 8,
        }
      }
    >
      Black Winter Jacket
    </Text>
    <Text
      accessibilityLabel="Description: Autumn And Winter Casual cotton-padded jacket"
      numberOfLines={2}
      style={
        {
          "color": "#575757",
          "fontSize": 13,
          "lineHeight": 14,
          "marginBottom": 4,
          "opacity": 0.8,
        }
      }
    >
      Autumn And Winter Casual cotton-padded jacket
    </Text>
    <View
      style={
        {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1C1B1F",
            "fontSize": 14,
          }
        }
      >
        ₹ 499.00
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <View
        accessibilityRole="image"
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "fontSize": 20,
                "marginHorizontal": 2,
              },
              {
                "color": "#ffb300",
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "fontSize": 20,
                "marginHorizontal": 2,
              },
              {
                "color": "#ffb300",
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "fontSize": 20,
                "marginHorizontal": 2,
              },
              {
                "color": "#ffb300",
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "fontSize": 20,
                "marginHorizontal": 2,
              },
              {
                "color": "#ffb300",
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "fontSize": 20,
                "marginHorizontal": 2,
              },
              {
                "color": "#ffb300",
              },
            ]
          }
        >
          ★
        </Text>
      </View>
      <Text
        accessibilityLabel="6,890 reviews"
        style={
          {
            "color": "#9CA4AB",
            "fontSize": 13,
            "fontWeight": "500",
            "opacity": 0.7,
          }
        }
      >
        6,890
      </Text>
    </View>
  </View>
</View>
`;
